[package]
name = "stealthstream"
version = "0.1.0"
edition = "2021"

[features]
default = ["signals"]

# This feature enables signal handlers to be registered for client and server (e.g ctrl + c).
signals = []

# Enabled secure communication
tls = ["rustls", "rustls-pemfile", "tokio-rustls"]

[dev-dependencies]
tokio-tungstenite = "0.20.1"
rand = "0.8.5"
pretty_assertions = "1.4.0"
url = "2.4.1"

[dependencies]
anyhow = "1.0.75"
bytes = "1.5.0"
ctrlc = "3.4.1"
futures-util = { version = "0.3.29", features = ["sink", "futures-sink"] }
derive-getters = "0.3.0"
thiserror = "1.0.50"
tokio-util = { version = "0.7.10", features = ["codec"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.17"

# Tls dependencies
tokio-rustls = { version = "0.24.1", optional = true, features = [
    "dangerous_configuration",
] }
rustls-pemfile = { version = "1.0.4", optional = true }
rustls = { version = "0.21.8", default-features = false, optional = true }
lz4_flex = "0.11.1"

[dependencies.tokio]
version = "*"
features = [
    "net",
    "rt-multi-thread",
    "signal",
    "time",
    "sync",
    "io-util",
    "macros",
    "fs",
]

[dependencies.uuid]
version = "1.5.0"
features = ["v4", "fast-rng"]

[[example]]
name = "client"
path = "examples/client/src/main.rs"

[[example]]
name = "server"
path = "examples/server/src/main.rs"
